@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: source.test,v 1.8.4.5 2006/04/28 16:09:43 dgp Exp $
+# RCS: @(#) $Id: source.test,v 1.8.4.6 2009/01/05 14:54:21 dgp Exp $
 
 if {[catch {package require tcltest 2.1}]} {
     puts stderr "Skipping tests in [info script]. tcltest 2.1 required."
@@ -21,7 +21,7 @@ if {[catch {package require tcltest 2.1}]} {
 
 namespace eval ::tcl::test::source {
     namespace import ::tcltest::*
-
+
 test source-1.1 {source command} -setup {
     set x "old x value"
     set y "old y value"
@@ -269,7 +269,23 @@ test source-7.6 {source -encoding: mismatch encoding error} -setup {
     removeFile source.file
 } -returnCodes error -match glob -result {invalid command name*}
 
+test source-8.1 {source and coroutine/yield} -setup {
+    set sourcefile [makeFile {} source.file]
+    file delete $sourcefile
+} -body {
+    makeFile {yield 1; yield 2; return 3;} $sourcefile
+    coroutine coro apply {f {yield;source $f}} $sourcefile
+    list [coro] [coro] [coro] [info exist coro]
+} -cleanup {
+    catch {rename coro {}}
+    removeFile source.file
+} -result {1 2 3 0}
+
 cleanupTests
 }
 namespace delete ::tcl::test::source
 return
+
+# Local Variables:
+# mode: tcl
+# End:
