@@ -1,3 +1,14 @@
+2009-01-05  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdMZ.c (TclNRSourceObjCmd): Make implementation of the
+	* generic/tclIOUtil.c (TclNREvalFile):    [source] command be NRE
+	enabled so that [yield] inside a script sourced in a coroutine can
+	work. [Bug 2412068]
+
+2009-01-04  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdAH.c: Tidy up spacing and code style.
+
 2009-01-03  Kevin B. Kenny <kennykb@acm.org>:
 
 	* library/clock.tcl (tcl::clock::add): Fixed error message formatting
